working on literature

--- a/paper/ldpcGpuTegra_bibliography.bib
+++ b/paper/ldpcGpuTegra_bibliography.bib
@@ -220,3 +220,120 @@ month={Oct},}
  address = {New York, NY, USA},
  keywords = {FEC techniques, FPGA implementation, GPU-like architecture, LDPC codes, MIPS processor, SIMD matrix, signal processing systems},
 }
+
+@INPROCEEDINGS{art_optimize_0, 
+author={G. Wang and M. Wu and B. Yin and J. R. Cavallaro}, 
+booktitle={Global Conference on Signal and Information Processing (GlobalSIP), 2013 IEEE}, 
+title={High throughput low latency LDPC decoding on GPU for SDR systems}, 
+year={2013}, 
+pages={1258-1261}, 
+keywords={codecs;data communication;decoding;graphics processing units;parity check codes;software radio;GPU architectures;GPU systems;GPU-based LDPC decoder;LDPC decoder;SDR systems;algorithm optimization;asynchronous data transfer;bit rate 1.25 Gbit/s;bit rate 316 Mbit/s;bit rate 62.5 Mbit/s to 304.16 Mbit/s;coalesced memory access;decoding latency;graphics processing units;high throughput low latency LDPC decoding;multistream concurrent kernel execution;optimization techniques;parallel LDPC decoder;software-defined radio;Decoding;Graphics processing units;Kernel;Message systems;Parity check codes;Throughput;WiMAX;GPU;LDPC codes;high throughput;low latency;software-defined radio}, 
+doi={10.1109/GlobalSIP.2013.6737137}, 
+month={Dec},}
+
+@ARTICLE{art_ldpc_OpenCl, 
+author={G. Falcao and V. Silva and L. Sousa and J. Andrade}, 
+journal={IEEE Signal Processing Magazine}, 
+title={Portable LDPC Decoding on Multicores Using OpenCL [Applications Corner]}, 
+year={2012}, 
+volume={29}, 
+number={4}, 
+pages={81-109}, 
+keywords={decoding;parallel architectures;parity check codes;signal processing;CPU;GPU;Open Computing Language;OpenCL framework;error-correcting code systems;graphics processing units;low density parity check decoding;multicore central processing unit;multicores;multiplatform kernels;parallel computing architecture;parallel kernels;portable LDPC decoding;signal processing;Error correction codes;Multicore processing;Parallel processing;Signal processing algorithms;Tutorials}, 
+doi={10.1109/MSP.2012.2192212}, 
+ISSN={1053-5888}, 
+month={July},}
+
+@INPROCEEDINGS{art_memory_coalesced, 
+author={S. Kang and J. Moon}, 
+booktitle={Communications (ICC), 2012 IEEE International Conference on}, 
+title={Parallel LDPC decoder implementation on GPU based on unbalanced memory coalescing}, 
+year={2012}, 
+pages={3692-3697}, 
+keywords={decoding;graph theory;graphics processing units;message passing;parallel architectures;parity check codes;CUDA-GPU decoder;LDPC code structure;bipartite graph;bit-to-check message passing;check-to-bit message passing;coalesced memory access;compute-unified-device-architecture programming;decoding process;graphics processing unit;low density parity check codes;memory transaction time reduction;on-chip shared memory;parallel LDPC decoder design;texture cache;unbalanced memory coalescing;Arrays;Decoding;Error analysis;Graphics processing units;Memory management;Message passing;Parity check codes}, 
+doi={10.1109/ICC.2012.6363991}, 
+ISSN={1550-3607}, 
+month={June},}
+
+@ARTICLE{art_gallager, 
+author={R. Gallager}, 
+journal={IRE Transactions on Information Theory}, 
+title={Low-density parity-check codes}, 
+year={1962}, 
+volume={8}, 
+number={1}, 
+pages={21-28}, 
+keywords={Error-correcting codes;Parity checks;Channel capacity;Communication systems;Data communication;Equations;Error correction codes;Error probability;Information theory;Linear approximation;Maximum likelihood decoding;Parity check codes}, 
+doi={10.1109/TIT.1962.1057683}, 
+ISSN={0096-1000}, 
+month={January},}
+
+@ARTICLE{art_macKay, 
+author={D. J. C. MacKay and R. M. Neal}, 
+journal={Electronics Letters}, 
+title={Near Shannon limit performance of low density parity check codes}, 
+year={1997}, 
+volume={33}, 
+number={6}, 
+pages={457-458}, 
+keywords={error correction codes;Gaussian channels;empirical performance;low density parity check codes;near Shannon limit performance}, 
+doi={10.1049/el:19970362}, 
+ISSN={0013-5194}, 
+month={Mar},}
+
+
+@ARTICLE{art_massively, 
+author={G. Falcao and L. Sousa and V. Silva}, 
+journal={IEEE Transactions on Parallel and Distributed Systems}, 
+title={Massively LDPC Decoding on Multicore Architectures}, 
+year={2011}, 
+volume={22}, 
+number={2}, 
+pages={309-322}, 
+keywords={computer graphic equipment;coprocessors;multiprocessing systems;parallel algorithms;Cell broadband engine;graphics processing units;low-density parity-check code;multicore architectures;parallel algorithms;software-based LDPC decoders;x86 processors;Computer architecture;Data structures;Decoding;Graphics;Multicore processing;Parallel algorithms;Parallel processing;Parity check codes;Throughput;Very large scale integration;CELL;CUDA;GPU;LDPC;OpenMP.;data-parallel computing;graphics processing units;multicore}, 
+doi={10.1109/TPDS.2010.66}, 
+ISSN={1045-9219}, 
+month={Feb},}
+
+@ARTICLE{art_ldpc_OpenCl_1, 
+author={J. Andrade and G. Falcao and V. Silva}, 
+journal={Electronics Letters}, 
+title={Flexible design of wide-pipeline-based WiMAX QC-LDPC decoder architectures on FPGAs using high-level synthesis}, 
+year={2014}, 
+volume={50}, 
+number={11}, 
+pages={839-840}, 
+keywords={VLSI;WiMax;decoding;error statistics;field programmable gate arrays;fixed point arithmetic;high level synthesis;parallel processing;parity check codes;8-bit fixed-point arithmetic;802.16e;FPGA;OpenCL-based kernels;SIMD;WiMAX standard;bit error rate performance;decoding throughput;error floor region;field-programmable gate array;flexible design;high-level synthesis tool;low-density parity-check decoder approach;optimised open computing language;parallelism level;single-instruction multiple data;very large-scale integration;wide-pipeline architecture;wide-pipeline-based WiMAX QC-LDPC decoder architecture;worldwide interoperability for microwave access standard}, 
+doi={10.1049/el.2013.3411}, 
+ISSN={0013-5194}, 
+month={May},}
+
+@ARTICLE{art_shannon, 
+author={Sae-Young Chung and G. D. Forney and T. J. Richardson and R. Urbanke}, 
+journal={IEEE Communications Letters}, 
+title={On the design of low-density parity-check codes within 0.0045 dB of the Shannon limit}, 
+year={2001}, 
+volume={5}, 
+number={2}, 
+pages={58-60}, 
+keywords={AWGN channels;block codes;decoding;error statistics;linear programming;AWGN channel;Shannon limit;binary-input additive white Gaussian noise channel;bit error rate;block length;code construction;iterative linear programming;low-density parity-check codes;rate 1/2 code;simulation results;sum-product decoding;AWGN;Additive white noise;Bit error rate;Decoding;H infinity control;Laboratories;Parity check codes;Quantization;Sum product algorithm;Turbo codes}, 
+doi={10.1109/4234.905935}, 
+ISSN={1089-7798}, 
+month={Feb},}
+
+
+@Article{art_like_me,
+author="Park, Joo-Yul
+and Chung, Ki-Seok",
+title="Parallel LDPC decoding using CUDA and OpenMP",
+journal="EURASIP Journal on Wireless Communications and Networking",
+year="2011",
+volume="2011",
+number="1",
+pages="1--8",
+abstract="Digital mobile communication technologies, such as next generation mobile communication and mobile TV, are rapidly advancing. Hardware designs to provide baseband processing of new protocol standards are being actively attempted, because of concurrently emerging multiple standards and diverse needs on device functions, hardware-only implementation may have reached a limit. To overcome this challenge, digital communication system designs are adopting software solutions that use central processing units or graphics processing units (GPUs) to implement communication protocols. In this article we propose a parallel software implementation of low density parity check decoding algorithms, and we use a multi-core processor and a GPU to achieve both flexibility and high performance. Specifically, we use OpenMP for parallelizing software on a multi-core processor and Compute Unified Device Architecture (CUDA) for parallel software running on a GPU. We process information on H-matrices using OpenMP pragmas on a multi-core processor and execute decoding algorithms in parallel using CUDA on a GPU. We evaluated the performance of the proposed implementation with respect to two different code rates for the China Multimedia Mobile Broadcasting (CMMB) standard, and we verified that the proposed implementation satisfies the CMMB bandwidth requirement.",
+issn="1687-1499",
+doi="10.1186/1687-1499-2011-172",
+url="http://dx.doi.org/10.1186/1687-1499-2011-172"
+}
+
