--- a/paper/ldpcGpuTegra_bibliography.bib
+++ b/paper/ldpcGpuTegra_bibliography.bib
@@ -321,7 +321,7 @@ doi={10.1109/4234.905935},
 ISSN={1089-7798}, 
 month={Feb},}
 
-@Article{art_like_me,
+@Article{art_cuda_openmp,
 author="Park, Joo-Yul
 and Chung, Ki-Seok",
 title="Parallel LDPC decoding using CUDA and OpenMP",
@@ -376,3 +376,55 @@ doi="10.1007/s10470-012-9895-7",
 url="http://dx.doi.org/10.1007/s10470-012-9895-7"
 }
 
+@ARTICLE{art_convolutional, 
+author={Y. Hou and R. Liu and H. Peng and L. Zhao}, 
+journal={IEEE Communications Letters}, 
+title={High Throughput Pipeline Decoder for LDPC Convolutional Codes on GPU}, 
+year={2015}, 
+volume={19}, 
+number={12}, 
+pages={2066-2069}, 
+keywords={convolutional codes;decoding;graphics processing units;parity check codes;CUDA kernel execution stage;GPU;LDPC-CC pipeline decoder;Nvidia GTX460;Nvidia GTX580;compute unified device architecture;data transfer stage;decoding parallelism granularity;graphics processing unit;low-density parity check convolutional code;throughput pipeline decoder;Decoding;Graphics processing units;Iterative decoding;Parallel processing;Throughput;GPU;LDPC convolutional code;parallelism;pipeline decoder}, 
+doi={10.1109/LCOMM.2015.2486764}, 
+ISSN={1089-7798}, 
+month={Dec},}
+
+@ARTICLE{art_multicore_techs, 
+author={H. Kim and R. Bond}, 
+journal={IEEE Signal Processing Magazine}, 
+title={Multicore software technologies}, 
+year={2009}, 
+volume={26}, 
+number={6}, 
+pages={80-89}, 
+keywords={electronic engineering computing;microprocessor chips;multiprocessing systems;multicore architecture;multicore processor;multicore software technology;Computer architecture;Concurrent computing;Coprocessors;Hardware;Memory management;Multicore processing;Parallel processing;Parallel programming;Programming profession;Supercomputers}, 
+doi={10.1109/MSP.2009.934141}, 
+ISSN={1053-5888}, 
+month={November},}
+
+@book{art_openMp_book,
+ author = {Chapman, Barbara and Jost, Gabriele and Pas, Ruud van der},
+ title = {Using OpenMP: Portable Shared Memory Parallel Programming (Scientific and Engineering Computation)},
+ year = {2007},
+ isbn = {0262533022, 9780262533027},
+ publisher = {The MIT Press},
+}
+
+@ARTICLE{art_intel_sse, 
+author={M. Deilmann}, 
+journal={Intel Corporation},
+title={A Guide to Auto-vectorization with Intel® C++ Compilers}, 
+year={2012}, 
+volume={}, 
+number={}, 
+pages={}, 
+keywords={}, 
+doi={}, 
+ISSN={}, 
+month={April},}
+
+@electronic{website_cuda,
+ authors   = "",
+ title     = "CUDA Homepage",
+ url       = "http://www.nvidia.com/object/cuda_home_new.html"
+}
